--- a/feature/location/src/main/res/layout/fragment_locations.xml
+++ b/feature/location/src/main/res/layout/fragment_locations.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,7 +16,7 @@
             android:layout_height="match_parent"
             app:layout_scrollFlags="scroll|enterAlways|snapMargins">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="16dp"
@@ -26,41 +25,31 @@
 
                 <com.akerimtay.rickandmorty.core.presentation.widget.SearchLabelView
                     android:id="@+id/slv_locations"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="@id/g_end_toolbar"
-                    app:layout_constraintStart_toStartOf="@id/g_start_toolbar"
+                    android:layout_marginHorizontal="16dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:showFilter="true"
                     app:text="@string/find_location" />
-
-                <TextView
-                    android:id="@+id/tv_location_count"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:textAppearance="?attr/textAppearanceOverline"
-                    android:textColor="?attr/colorLabelText"
-                    app:layout_constraintStart_toStartOf="@id/g_start_toolbar"
-                    app:layout_constraintTop_toBottomOf="@id/slv_locations"
-                    tools:text="Total locations: 200" />
-
-                <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/g_start_toolbar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintGuide_begin="16dp" />
-
-                <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/g_end_toolbar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintGuide_end="16dp" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </FrameLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp">
+
+            <TextView
+                android:id="@+id/tv_location_count"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_medium"
+                android:paddingVertical="8dp"
+                android:textAppearance="?attr/textAppearanceOverline"
+                android:textColor="?attr/colorLabelText"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Total locations: 200" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -84,4 +73,18 @@
                 tools:listitem="@layout/item_location" />
         </FrameLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_scroll_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:backgroundTint="?attr/colorPrimary"
+        android:src="@drawable/ic_arrow_up_32"
+        android:visibility="gone"
+        app:backgroundTint="?attr/colorPrimary"
+        app:layout_anchor="@id/rv_locations"
+        app:layout_anchorGravity="bottom|end"
+        tools:ignore="ContentDescription"
+        tools:visibility="visible" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
